--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<h2 class="major">Demonstrated history of working in diverse interdisiplinary domains</h2>
+									<p>Significant amount of experience in healthcare, security, and marketing communications, but I have worked on projects in just about every major industry.  Why does it matter?  My broader exposure to solutions in different fields helps me come up with the best solutions in your field.  </p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/bigfoot.jpg" alt="" />
 								</div>
 							</section>
 
