--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
 									is Keith Bourne</h1>
-									<p>Couple decades experience building technologies, including </strong>mobile and machine learning.</strong>, as well as an MBA from Babson College and a Master's of Applied Data Science from the University of Michigan. </p>
+									<p>> 20 years experience building technologies, primarily in </strong>mobile and machine learning.</strong>
+									<br>> MBA from Babson College
+									<br>> Master's of Applied Data Science from the University of Michigan
+									<br>> Technology project manager and innovator
+									<br>> Everything you need to move your technology forward</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
