--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Demonstrated history of working in diverse interdisiplinary domains</h2>
-									<p>Significant amount of experience in healthcare, security, and marketing communications, but I have worked on projects in just about every major industry.  Why does it matter?  My broader exposure to solutions in different fields helps me come up with the best solutions in your field.  </p>
+									<p>Significant amount of experience in healthcare, security, and marketing communications, but I have worked on projects in just about every major industry.  Why does it matter?  My broader exposure to solutions in different fields helps me come up with the best solutions in your field.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/bigfoot.jpg" alt="" />
@@ -53,8 +53,8 @@
 						<!-- Panel -->
 							<section class="panel color1">
 								<div class="intro joined">
-									<h2 class="major">Amet lorem</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<h2 class="major">Strategic Focus</h2>
+									<p>I recently finished my Masters Degree in Data Science from the University of Michigan to complement my MBA from Babson College where I focused on technology entrepreneurship and marketing. This combination provides a strong analytical base for approaching machine learning problems with an organization’s overall strategic direction in mind. </p>
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
@@ -71,8 +71,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">Magna amet tempus</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
+									<h2 class="major">Strong Management Experience</h2>
+									<p>18 years experience as a project manager, managing a wide variety of technology development projects ranging in cross-functional team sizes of 2 to 50, and representing companies of all sizes, from start-ups to Fortune 50 and everything in between.  I've also served in diverse roles in high growth start up environments, including Senior Software Engineer, Marketing Director, Chief Operations Officer, and Founder/CEO.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
@@ -82,8 +82,8 @@
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major">Elit integer</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<h2 class="major">Community Oriented</h2>
+									<p>I've played a key role in the growth and development of high-tech fields in the local community – I founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, and co-founded Mobile Monday Michigan. I am a co-organizer of Ann Arbor Machine Learning and co-founder of Detroit Machine Learning, both focused on accelerating the growth of Machine Learning utilization in Southeast Michigan. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
