--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									<p>18 years experience as a project manager, managing a wide variety of technology development projects ranging in cross-functional team sizes of 2 to 50, and representing companies of all sizes, from start-ups to Fortune 50 and everything in between.  I've also served in diverse roles in high growth start up environments, including Senior Software Engineer, Marketing Director, Chief Operations Officer, and Founder/CEO.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/M22standing.jpg" alt="" />
 								</div>
 							</section>
 
