--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<section class="panel">
 								<div class="intro color2">
 									<h2 class="major">Community Oriented</h2>
-									<p>I've played a key role in the growth and development of high-tech fields in the local community – I founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, and co-founded Mobile Monday Michigan. I am a co-organizer of Ann Arbor Machine Learning and co-founder of Detroit Machine Learning, both focused on accelerating the growth of Machine Learning utilization in Southeast Michigan. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p>
+									<p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
