--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 							</section>
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium right" id="first">
-								<div class="content span-6">
+							<section class="panel spotlight medium left" id="first">
+								<div class="content span-5">
+							<!-- <section class="panel spotlight medium right" id="first">
+								<div class="content span-7"> -->
 									<h2 class="major">Demonstrated history of working in diverse interdisiplinary domains</h2>
 									<p>Significant amount of experience in healthcare, security, and marketing communications, but I have worked on projects in just about every major industry.  Why does it matter?  My broader exposure to solutions in different fields helps me come up with the best solutions in your field.</p>
 								</div>
