--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<h2 class="major">Community Oriented</h2>
 									<p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p>
 								</div>
-								<div class="gallery">
+								<!-- <div class="gallery">
 									<div class="group span-3">
 										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
@@ -101,17 +101,17 @@
 										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
 									</div>
 									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-								</div>
+								</div> -->
 							</section>
 
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Want to chat?  Try these:</p>
 								</div>
 								<div class="inner columns divided">
-									<div class="span-3-25">
+									<<!-- div class="span-3-25">
 										<form method="post" action="#">
 											<div class="fields">
 												<div class="field half">
@@ -131,13 +131,13 @@
 												<li><input type="submit" value="Send Message" class="button primary" /></li>
 											</ul>
 										</form>
-									</div>
+									</div> -->
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
 											<li class="icon brands fa-twitter"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li>
-											<li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-instagram"><a href="#">@untitled-tld</a></li>
+											<!-- <li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li> -->
+											<!-- <li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li> -->
+											<!-- <li class="icon brands fa-instagram"><a href="#">@untitled-tld</a></li> -->
 											<li class="icon brands fa-medium-m"><a href="#">medium.com/untitled</a></li>
 										</ul>
 									</div>
@@ -145,7 +145,7 @@
 							</section>
 
 						<!-- Panel -->
-							<section class="panel color2-alt">
+							<!-- <section class="panel color2-alt">
 								<div class="intro color2">
 									<h2 class="major">Elements</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam. </p>
@@ -411,7 +411,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										</form>
 									</div>
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Copyright -->
 							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
