--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							</section>
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium left" id="first">
+							<section class="panel spotlight medium top" id="first">
 								<div class="content span-5">
 							<!-- <section class="panel spotlight medium right" id="first">
 								<div class="content span-7"> -->
