--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							</section>
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium top" >
+							<section class="panel spotlight medium top" >  <!-- id="first" -->
 								<div class="content span-9">
 							<!-- <section class="panel spotlight medium right" id="first">
 								<div class="content span-7"> -->
@@ -111,7 +111,7 @@
 									<p>Want to chat?  Try these:</p>
 								</div>
 								<div class="inner columns divided">
-									<<!-- div class="span-3-25">
+									<!-- div class="span-3-25">
 										<form method="post" action="#">
 											<div class="fields">
 												<div class="field half">
@@ -135,6 +135,8 @@
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
 											<li class="icon brands fa-twitter"><a href="#">@untitled-tld</a></li>
+											<li class="icon brands fa-"><a href="#">@untitled-tld</a></li>
+											<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 											<!-- <li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li> -->
 											<!-- <li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li> -->
 											<!-- <li class="icon brands fa-instagram"><a href="#">@untitled-tld</a></li> -->
