--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
 											<li class="icon brands fa-twitter"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-"><a href="#">@untitled-tld</a></li>
-											<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+											<li class="icon brands fa-github"><a href="#">GitHub</a></li>
 											<!-- <li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li> -->
 											<!-- <li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li> -->
 											<!-- <li class="icon brands fa-instagram"><a href="#">@untitled-tld</a></li> -->
