--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							</section>
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight small left" >  <!-- id="first" -->
+							<section class="panel spotlight large left" >  <!-- id="first" -->
 								<div class="content span-9">
 							<!-- <section class="panel spotlight medium right" id="first">
 								<div class="content span-7"> -->
