--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="ihttps://kbourne.github.io/articles" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+										<a href="ihttps://kbourne.github.io/articles" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
 										<!-- <a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a> -->
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
