--- a/index.html
+++ b/index.html
@@ -87,10 +87,14 @@
 									<h2 class="major">Community Oriented</h2>
 									<p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p>
 								</div>
+								<div class="intro color2">
+									<h2 class="major">Community Oriented</h2>
+									<p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p>
+								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="ihttps://kbourne.github.io/articles" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<!-- <a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a> -->
+										<!-- <a href="https://kbourne.github.io/articles" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a> -->
+										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 									</div>
