--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 						<!-- Panel -->
 							<section class="panel">
-								<div class="intro color2">
+								<div class="intro joined">
 									<h2 class="major">Community Oriented</h2>
 									<p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p>
 								</div>
