--- a/index.html
+++ b/index.html
@@ -82,10 +82,30 @@
 							</section>
 
 						<!-- Panel -->
-							<section class="panel">
-								<div class="intro color2">
+							<section class="panel color1">
+								<div class="intro joined">
 									<h2 class="major">Community Oriented</h2>
 									<p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p>
+								</div>
+								<div class="inner">
+									<ul class="grid-icons three connected">
+										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
+										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
+										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
+										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
+										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
+										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
+									</ul>
+								</div>
+							</section>
+
+						<!-- Panel -->
+							<section class="panel">
+								<div class="intro color2">
+									<h2 class="major">Articles</h2>
+									<p><a href="https://kbourne.github.io/articles" >Dogs</p>
+									<!-- <h2 class="major">Community Oriented</h2>
+									<p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p> -->
 								</div>
 								<!-- <div class="intro color2">
 									<h2 class="major">Articles</h2>
