--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
 									<h2 class="major">Articles</h2>
 									<!-- <p><a href="https://kbourne.github.io/articles" >Dogs</p> -->
 									<!-- <h2 class="major">Community Oriented</h2> -->
-									<p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p>
+									<ul>
+										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
+									</ul>
+									<!-- <p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p> -->
 								</div>
 								<!-- <div class="intro color2">
 									<h2 class="major">Articles</h2>
