--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
 										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
 										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
 										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
 									</ul>
 									<!-- <p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p> -->
 								</div>
