--- a/index.html
+++ b/index.html
@@ -55,8 +55,18 @@
 						<!-- Panel -->
 							<section class="panel color1">
 								<div class="intro joined">
-									<h2 class="major">Strategic Focus</h2>
-									<p>I recently finished my Masters Degree in Data Science from the University of Michigan to complement my MBA from Babson College where I focused on technology entrepreneurship and marketing. This combination provides a strong analytical base for approaching machine learning problems with an organization’s overall strategic direction in mind. </p>
+									<h2 class="major">Articles</h2>
+									<ul>
+										<li><a href="https://kbourne.github.io/articles" >Visit my blog to read all of my articles!</a></li>
+										<li><a href="https://kbourne.github.io/articles/article1.html" >Disease Trajectory: Applying Advanced Healthcare Machine Learning to Dog Healthcare</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Introducing the "Doing Data Science Better" Series</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Time is Your Friend in Data Science, Use It!</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Fake It Until You Make It! Using Synthetic Datasets to Your Advantage</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Do it 10X Faster By Standardizing Your Approach to Machine Learning</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Normalizing: Comprehensive List of Machine Learning Models and Which Ones to Normalize</a></li>
+									</ul>
+
+									
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
@@ -84,8 +94,9 @@
 						<!-- Panel -->
 							<section class="panel color1">
 								<div class="intro joined">
-									<h2 class="major">Community Oriented</h2>
-									<p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p>
+									<h2 class="major">Strategic Focus</h2>
+									<p>I recently finished my Masters Degree in Data Science from the University of Michigan to complement my MBA from Babson College where I focused on technology entrepreneurship and marketing. This combination provides a strong analytical base for approaching machine learning problems with an organization’s overall strategic direction in mind. </p>
+
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
@@ -102,19 +113,10 @@
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major">Articles</h2>
+									<h2 class="major">Community Oriented</h2>
 									<!-- <p><a href="https://kbourne.github.io/articles" >Dogs</p> -->
 									<!-- <h2 class="major">Community Oriented</h2> -->
-									<ul>
-										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
-										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
-										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
-										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
-										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
-										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
-										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
-										<li><a href="https://kbourne.github.io/articles" >Dogs</a></li>
-									</ul>
+									<p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p>
 									<!-- <p>Played key roles in the growth of high-tech fields in the local community – founded the Mobile Monday Ann Arbor and eCommerce Ann Arbor groups, co-founded Mobile Monday Michigan, co-organizer of Ann Arbor Machine Learning, co-founder of Detroit Machine Learning. I also instruct courses on mobile technologies, mobile development, and machine learning for clients that include Lochbridge, the NFL, and PepsiCo.</p> -->
 								</div>
 								<!-- <div class="intro color2">
