--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 								<div class="intro joined">
 									<h2 class="major">Articles</h2>
 									<ul>
-										<li><a href="https://kbourne.github.io/articles" >Visit my blog to read all of my articles!</a></li>
+										<li><strong><a href="https://kbourne.github.io/articles" >Visit my blog to read all of my articles!</a></strong></li>
 										<li><a href="https://kbourne.github.io/articles/article1.html" >Disease Trajectory: Applying Advanced Healthcare Machine Learning to Dog Healthcare</a></li>
 										<li><a href="https://kbourne.github.io/articles" >Introducing the "Doing Data Science Better" Series</a></li>
 										<li><a href="https://kbourne.github.io/articles" >Time is Your Friend in Data Science, Use It!</a></li>
 										<li><a href="https://kbourne.github.io/articles" >Fake It Until You Make It! Using Synthetic Datasets to Your Advantage</a></li>
-										<li><a href="https://kbourne.github.io/articles" >Do it 10X Faster By Standardizing Your Approach to Machine Learning</a></li>
-										<li><a href="https://kbourne.github.io/articles" >Normalizing: Comprehensive List of Machine Learning Models and Which Ones to Normalize</a></li>
+										<!-- <li><a href="https://kbourne.github.io/articles" >Do it 10X Faster By Standardizing Your Approach to Machine Learning</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Normalizing: Comprehensive List of Machine Learning Models and Which Ones to Normalize</a></li> -->
 									</ul>
 
 									
