--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
 									is Keith Bourne</h1>
-									<p>> 20 years experience building technologies, primarily in </strong>mobile and machine learning.</strong>
-									<br>> MBA from Babson College
-									<br>> Master's of Applied Data Science from the University of Michigan
-									<br>> Technology project manager and innovator
-									<br>> Everything you need to move your technology forward</p>
+
+									
+									<p> 20 years experience building technologies, primarily in </strong>mobile, machine learning, and generative AI.</strong>
+									<br> Senior Generative AI Data Scientist | Technical Manager | GenAI Author
+									<br> Master's of Applied Data Science from the University of Michigan
+									<br> MBA from Babson College
+									<br> Generative AI | Retrieval Augmented Generation (RAG) | large model training & fine-tuning
+									<br> Technology project manager and innovator
+									<br> Everything you need to move your generative AI technology forward</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
