--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
 									is Keith Bourne</h1>
-
-									
-									<p> 20 years experience building technologies, primarily in </strong>mobile, machine learning, and generative AI.</strong>
-									<br> Senior Generative AI Data Scientist | Technical Manager | GenAI Author
-									<br> Master's of Applied Data Science from the University of Michigan
-									<br> MBA from Babson College
-									<br> Generative AI | Retrieval Augmented Generation (RAG) | large model training & fine-tuning
-									<br> Technology project manager and innovator
-									<br> Everything you need to move your generative AI technology forward</p>
+									<p>- 20 years experience building technologies, primarily in </strong>mobile, machine learning, and generative AI.</strong>
+									<br>- Senior Generative AI Data Scientist | Technical Manager | GenAI Author
+									<br>- Master's of Applied Data Science from the University of Michigan
+									<br>- MBA from Babson College
+									<br>- Generative AI | Retrieval Augmented Generation (RAG) | large model training & fine-tuning
+									<br>- Technology project manager and innovator
+									<br>- Everything you need to move your generative AI technology forward</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -49,7 +47,7 @@
 							<!-- <section class="panel spotlight medium right" id="first">
 								<div class="content span-7"> -->
 									<h2 class="major">Demonstrated history of working in diverse interdisiplinary domains</h2>
-									<p>Significant amount of experience in healthcare, security, and marketing communications, but I have worked on projects in just about every major industry.  Why does it matter?  My broader exposure to solutions in different fields helps me come up with the best solutions in your field.</p>
+									<p>Significant amount of experience in fintech, healthcare, security, and marketing communications, but I have worked on projects in just about every major industry.  Why does it matter?  My broader exposure to solutions in different fields helps me come up with the best solutions in your field.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/bigfoot.jpg" alt="" />
