--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 									<br>> Senior Generative AI Data Scientist | Technical Manager | GenAI Author
 									<br>> Master's of Applied Data Science from the University of Michigan
 									<br>> MBA from Babson College
-									<br>> Generative AI | Retrieval Augmented Generation (RAG) | large model training & fine-tuning
+									<br>> Specialities: Generative AI | Retrieval Augmented Generation (RAG) | large model training & fine-tuning
 									<br>> Technology project manager and innovator
 									<br>> Everything you need to move your generative AI technology forward</p>
 									<ul class="actions">
@@ -47,7 +47,7 @@
 							<!-- <section class="panel spotlight medium right" id="first">
 								<div class="content span-7"> -->
 									<h2 class="major">Demonstrated history of working in diverse interdisiplinary domains</h2>
-									<p>Significant amount of experience in fintech, healthcare, security, and marketing communications, but I have worked on projects in just about every major industry.  Why does it matter?  My broader exposure to solutions in different fields helps me come up with the best solutions in your field.</p>
+									<p>Significant amount of experience in fintech, healthcare, security, and marketing communications, but I have worked on projects in just about every major industry.<br><br>Why does it matter?<br><br>My broader exposure to solutions in different fields helps me come up with the best solutions in your field.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/bigfoot.jpg" alt="" />
