Update links in index

--- a/index.html
+++ b/index.html
@@ -60,10 +60,13 @@
 									<h2 class="major">Articles</h2>
 									<ul>
 										<li><strong><a href="https://kbourne.github.io/articles" >Visit my blog to read all of my articles!</a></strong></li>
+										<li><a href="https://www.linkedin.com/pulse/genais-unfulfilled-promise-think-again-developers-realizing-bourne-tvbyc/" >Article: GenAI's Unfulfilled Promise? Think Again: A Developer's Perspective on Realizing AI Potential</a></li>
+										<li><a href="https://www.linkedin.com/posts/keithbourne_im-excited-to-announce-the-completion-of-activity-7238141696608247808-l1nQ/" >Book annoucement: Unlocking Your Data with Generative AI and Retrieval-Augmented Generation (RAG)</a></li>
+										<li><a href="https://www.linkedin.com/posts/keithbourne_generativeai-ai-rag-activity-7217900817222098946-Qm2S" >Event recap: Build with AI Codelab: Full RAG Pipeline in Code with Gemini & Colab Enterprise</a></li>
 										<li><a href="https://kbourne.github.io/articles/article1.html" >Disease Trajectory: Applying Advanced Healthcare Machine Learning to Dog Healthcare</a></li>
-										<li><a href="https://kbourne.github.io/articles" >Introducing the "Doing Data Science Better" Series</a></li>
+										<!-- <li><a href="https://kbourne.github.io/articles" >Introducing the "Doing Data Science Better" Series</a></li>
 										<li><a href="https://kbourne.github.io/articles" >Time is Your Friend in Data Science, Use It!</a></li>
-										<li><a href="https://kbourne.github.io/articles" >Fake It Until You Make It! Using Synthetic Datasets to Your Advantage</a></li>
+										<li><a href="https://kbourne.github.io/articles" >Fake It Until You Make It! Using Synthetic Datasets to Your Advantage</a></li> -->
 										<!-- <li><a href="https://kbourne.github.io/articles" >Do it 10X Faster By Standardizing Your Approach to Machine Learning</a></li>
 										<li><a href="https://kbourne.github.io/articles" >Normalizing: Comprehensive List of Machine Learning Models and Which Ones to Normalize</a></li> -->
 									</ul>
