Updated mgmt experience blurb

--- a/index.html
+++ b/index.html
@@ -88,8 +88,12 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">Strong Management Experience</h2>
-									<p>20 years experience as a project manager, managing a wide variety of technology development projects ranging in cross-functional team sizes of 2 to 50, and representing companies of all sizes, from start-ups to Fortune 50 and everything in between.  I've also served in diverse roles in high growth start up environments, including Senior Software Engineer, Marketing Director, Chief Operations Officer, and Founder/CEO.</p>
+									<h2 class="major">Executive Profile</h2>
+									<p>Experienced Generative AI Data Scientist, Manager, and published GenAI author with 10+ years in AI and project management. Demonstrated success in transforming business using generative AI and RAG, as well as model fine-tuning, in production environments. Skilled at translating complex business needs into scalable tech solutions and leading teams for effective implementation in dynamic environments.</p>
+									<h2 class="major">Author</h2>
+									<p>Author of "Unlocking Your Date with Generative AI and Retrieval-Augmented Generation (RAG)" for Packt, one of the top technical publishers in the field (to be published Sept 2024). First book of its kind from a major publisher, reached top 50 AI book in in first week of its release!</p>									
+									<!-- <h2 class="major">Strong Management Experience</h2>
+									<p>20 years experience as a project manager, managing a wide variety of technology development projects ranging in cross-functional team sizes of 2 to 50, and representing companies of all sizes, from start-ups to Fortune 50 and everything in between.  I've also served in diverse roles in high growth start up environments, including Senior Software Engineer, Marketing Director, Chief Operations Officer, and Founder/CEO.</p> -->
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/M22standing.jpg" alt="" />
