Get rid of image gaps

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 									<h2 class="major">Articles</h2>
 									<p><a href="https://kbourne.github.io/articles" >Dogs</p>
 								</div> -->
-								<div class="gallery">
+								<!-- <div class="gallery">
 									<div class="group span-3">
-										<!-- <a href="https://kbourne.github.io/articles" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a> -->
+										<a href="https://kbourne.github.io/articles" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
@@ -157,7 +157,7 @@
 										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
 									</div>
 									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-								</div>
+								</div> -->
 							</section>
 
 						<!-- Panel -->
