--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
 							</section>
 
 						<!-- Panel -->
-							<section class="panel color1">
-								<div class="intro joined">
+							<section class="panel spotlight large left">
+							<!-- <section class="panel color1"> -->
+								<div class="content span-5">
+								<!-- <div class="intro joined"> -->
 									<h2 class="major">Areas of Expertise</h2>
 									<p>• Generative AI Model Adaption (Fine-tuning): Full-model fine-tuning (FMFT), Parameter efficient fine-tuning (PEFT), embedding model fine-tuning, adapter tuning, fine-tuning for personality adjustment, domain-specific fine-tuning, LoRA, fine-tuning models ranging from 10M to 70B parameters including BERT, LLaMA, All Pythia models, and quantization.
 									<br>• Training platforms: AWS Trainium, Nvidia DGX, GCP VertexAI, Lamini
@@ -117,16 +119,16 @@
 									<p>I recently finished my Masters Degree in Data Science from the University of Michigan to complement my MBA from Babson College where I focused on technology entrepreneurship and marketing. This combination provides a strong analytical base for approaching machine learning problems with an organization’s overall strategic direction in mind. </p> -->
 
 								</div>
-								<div class="inner">
+								<!-- <div class="inner">
 									<ul class="grid-icons two connected">
-										<!-- <li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
-										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li> -->
+										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
+										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
 										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
 										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
 										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
 										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
 									</ul>
-								</div>
+								</div> -->
 							</section>
 
 						<!-- Panel -->
