Areas of expertise update

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 
 						<!-- Panel -->
 							<section class="panel spotlight large left">
-							<!-- <section class="panel color1"> -->
-								<div class="content span-5">
-								<!-- <div class="intro joined"> -->
+							<section class="panel color1">
+								<!-- <div class="content span-5">
+								<div class="intro joined">
 									<h2 class="major">Areas of Expertise</h2>
 									<p>• Generative AI Model Adaption (Fine-tuning): Full-model fine-tuning (FMFT), Parameter efficient fine-tuning (PEFT), embedding model fine-tuning, adapter tuning, fine-tuning for personality adjustment, domain-specific fine-tuning, LoRA, fine-tuning models ranging from 10M to 70B parameters including BERT, LLaMA, All Pythia models, and quantization.
 									<br>• Training platforms: AWS Trainium, Nvidia DGX, GCP VertexAI, Lamini
@@ -146,10 +146,21 @@
 									<br>• LLMs: Gemini, ChatGPT, LLaMA, Claude, Mistral, Mixtral, OpenBio
 									<br>• Cloud Computing: Google Cloud Platform (GCP), AWS, Azure
 									</p>
-									<!--<h2 class="major">Strategic Focus</h2>
-									<p>I recently finished my Masters Degree in Data Science from the University of Michigan to complement my MBA from Babson College where I focused on technology entrepreneurship and marketing. This combination provides a strong analytical base for approaching machine learning problems with an organization’s overall strategic direction in mind. </p> -->
+									<h2 class="major">Strategic Focus</h2>
+									<p>I recently finished my Masters Degree in Data Science from the University of Michigan to complement my MBA from Babson College where I focused on technology entrepreneurship and marketing. This combination provides a strong analytical base for approaching machine learning problems with an organization’s overall strategic direction in mind. </p>
 
-								</div>
+								</div> -->
+								<h2 class="major">Areas of Expertise</h2>
+								<ul>
+									<li><strong>Generative AI Model Adaption (Fine-tuning): Full-model fine-tuning (FMFT), Parameter efficient fine-tuning (PEFT), embedding model fine-tuning, adapter tuning, fine-tuning for personality adjustment, domain-specific fine-tuning, LoRA, fine-tuning models ranging from 10M to 70B parameters including BERT, LLaMA, All Pythia models, and quantization.</li>
+									<li>Training platforms: AWS Trainium, Nvidia DGX, GCP VertexAI, Lamini</li>
+									<li>Retrieval-Augmented Generation (RAG): RAG application UI/UX, 30+ different advanced techniques, advanced RAG-friendly vectorization techniques, database indexing techniques for improving RAG, RAG-specific evaluation, modular RAG</li>
+									<li>Generative AI: Agents, Prompt engineering, LangChain/LangGraph/LCEL, vector databases</li>
+									<li>Evaluation: Weights & Biases, RAGAs, LangSmith</li>
+									<li>LLMs: Gemini, ChatGPT, LLaMA, Claude, Mistral, Mixtral, OpenBio</li>
+									<li>Cloud Computing: Google Cloud Platform (GCP), AWS, Azure</li>
+								</ul>
+
 								<!-- <div class="inner">
 									<ul class="grid-icons two connected">
 										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
