--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
 									is Keith Bourne</h1>
-									<p>Find my book "Unlocking Data with Generative AI and RAG" on Amazon:<br>                <a href="https://a.co/d/e6DgQSv">https://a.co/d/e6DgQSv</a>
+									<p>Find my book "Unlocking Data with Generative AI and RAG" on Amazon:
+									<br> ----------<a href="https://a.co/d/e6DgQSv">https://a.co/d/e6DgQSv</a>
 									<br>> 20 years experience building technologies, primarily in </strong>mobile, machine learning, and generative AI.</strong>
 									<br>> Senior Generative AI Data Scientist | Technical Manager | GenAI Author
 									<br>> Master's of Applied Data Science from the University of Michigan
