--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 									is Keith Bourne</h1>
 									<p>Find my book "Unlocking Data with Generative AI and RAG" on Amazon:
 									<br> ----------<a href="https://a.co/d/e6DgQSv">https://a.co/d/e6DgQSv</a>
-									<br>> 20 years experience building technologies, primarily in </strong>mobile, machine learning, and generative AI.</strong>
 									<br>> Senior Generative AI Data Scientist | Technical Manager | GenAI Author
-									<br>> Master's of Applied Data Science from the University of Michigan
-									<br>> MBA from Babson College
+									<br>> 20 years experience building technologies, primarily in </strong>generative AI, machine learning, and mobile.</strong>
+									<br>> Master's in Applied Data Science from the University of Michigan
+									<br>> Master's in Business Administration (MBA) from Babson College
 									<br>> Specialities: Generative AI | Retrieval Augmented Generation (RAG) | large model training & fine-tuning
 									<br>> Technology project manager and innovator
 									<br>> Everything you need to move your generative AI technology forward</p>
