--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									<h2 class="major">Executive Profile</h2>
 									<p>Experienced Generative AI Data Scientist, Manager, and published GenAI author with 10+ years in AI and project management. Demonstrated success in transforming business using generative AI and RAG, as well as model fine-tuning, in production environments. Skilled at translating complex business needs into scalable tech solutions and leading teams for effective implementation in dynamic environments.</p>
 									<h2 class="major">Author</h2>
-									<p>Author of "Unlocking Your Date with Generative AI and Retrieval-Augmented Generation (RAG)" for Packt, one of the top technical publishers in the field (to be published Sept 2024). First book of its kind from a major publisher, reached top 50 AI book in in first week of its release!</p>									
+									<p>Author of <a href="dog_demographics_and_health.html">"Unlocking Your Date with Generative AI and Retrieval-Augmented Generation (RAG)"</a> for Packt, one of the top technical publishers in the field (to be published Sept 2024). First book of its kind from a major publisher, reached top 50 AI book in in first week of its release!</p>									
 									<!--<h2 class="major">Strong Management Experience</h2>
 									<p>20 years experience as a project manager, managing a wide variety of technology development projects ranging in cross-functional team sizes of 2 to 50, and representing companies of all sizes, from start-ups to Fortune 50 and everything in between.  I've also served in diverse roles in high growth start up environments, including Senior Software Engineer, Marketing Director, Chief Operations Officer, and Founder/CEO.</p> -->
 								</div>
@@ -134,8 +134,8 @@
 						</section>
 
 						<!-- Panel -->
-							<section class="panel spotlight large left">
-							<section class="panel color1">
+						<!-- <section class="panel spotlight large left">
+							<section class="panel color1"> -->
 								<!-- <div class="content span-5">
 								<div class="intro joined">
 									<h2 class="major">Areas of Expertise</h2>
@@ -151,7 +151,7 @@
 									<p>I recently finished my Masters Degree in Data Science from the University of Michigan to complement my MBA from Babson College where I focused on technology entrepreneurship and marketing. This combination provides a strong analytical base for approaching machine learning problems with an organization’s overall strategic direction in mind. </p>
 
 								</div> -->
-								<h2 class="major">Areas of Expertise</h2>
+								<!-- <h2 class="major">Areas of Expertise</h2>
 								<ul>
 									<li><strong>Generative AI Model Adaption (Fine-tuning): Full-model fine-tuning (FMFT), Parameter efficient fine-tuning (PEFT), embedding model fine-tuning, adapter tuning, fine-tuning for personality adjustment, domain-specific fine-tuning, LoRA, fine-tuning models ranging from 10M to 70B parameters including BERT, LLaMA, All Pythia models, and quantization.</li>
 									<li>Training platforms: AWS Trainium, Nvidia DGX, GCP VertexAI, Lamini</li>
@@ -160,7 +160,7 @@
 									<li>Evaluation: Weights & Biases, RAGAs, LangSmith</li>
 									<li>LLMs: Gemini, ChatGPT, LLaMA, Claude, Mistral, Mixtral, OpenBio</li>
 									<li>Cloud Computing: Google Cloud Platform (GCP), AWS, Azure</li>
-								</ul>
+								</ul> -->
 
 								<!-- <div class="inner">
 									<ul class="grid-icons two connected">
@@ -172,7 +172,7 @@
 										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
 									</ul>
 								</div> -->
-							</section>
+						<!-- </section> -->
 
 						<!-- Panel -->
 							<section class="panel color4-alt">
