--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 									<h1 class="major">Hello, my name<br />
 									is Keith Bourne</h1>
 									<p>Find my book "Unlocking Data with Generative AI and RAG" on Amazon:
-									<br> ----------<a href="https://a.co/d/e6DgQSv">https://a.co/d/e6DgQSv</a>
+									<br> >>>> <a href="https://a.co/d/e6DgQSv">https://a.co/d/e6DgQSv</a>
 									<br>> Senior Generative AI Data Scientist | Technical Project Manager | GenAI Author
 									<br>> 20 years experience building technologies, primarily in </strong>generative AI, machine learning, and mobile.</strong>
 									<br>> Master's in Applied Data Science from the University of Michigan
