--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 									
 								</div>
 								<div class="inner">
-									<ul class="grid-icons three connected">
-										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
-										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
+									<ul class="grid-icons two connected">
+										<!-- <li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
+										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li> -->
 										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
 										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
 										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
