--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
 											<li class="icon brands fa-github"><a href="https://github.com/kbourne">GitHub</a></li>
-											<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/keithbourne/">linkedin.com/in/keithbourne/</a></li>
+											<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/keithbourne/">linkedin.com keithbourne</a></li>
 											<!-- <li class="icon brands fa-twitter"><a href="#">@untitled-tld</a></li> -->
 											<!-- <li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li> -->
 											<!-- <li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li> -->
