--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							<div class="content span-5">
 								<h2 class="major">Areas of Expertise</h2>
 								<ul>
-									<li>Generative AI Model Adaption (Fine-tuning): Full-model fine-tuning (FMFT), Parameter efficient fine-tuning (PEFT), embedding model fine-tuning, adapter tuning, fine-tuning for personality adjustment, domain-specific fine-tuning, LoRA, fine-tuning models ranging from 10M to 70B parameters including BERT, LLaMA, All Pythia models, and quantization.</li>
+									<li>Fine-tuning: Full-model fine-tuning (FMFT), Parameter efficient fine-tuning (PEFT), embedding model fine-tuning, adapter tuning, fine-tuning for personality adjustment, domain-specific fine-tuning, and quantization.</li>
 									<li>Training platforms: AWS Trainium, Nvidia DGX, GCP VertexAI, Lamini</li>
 									<li>Retrieval-Augmented Generation (RAG): RAG application UI/UX, 30+ different advanced techniques, advanced RAG-friendly vectorization techniques, database indexing techniques for improving RAG, RAG-specific evaluation, modular RAG</li>
 									<li>Evaluation: Weights & Biases, RAGAs, LangSmith</li>
@@ -150,7 +150,7 @@
 								<img src="images/rapids.jpg" alt="" />
 							</div>
 						</section>
-						
+
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color4">
