--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<div class="intro joined">
 									<h2 class="major">Articles</h2>
 									<ul>
-										<li><strong><a href="https://kbourne.github.io/articles" >Visit my blog to read all of my articles!</a></strong></li>
+										<!-- <li><strong><a href="https://kbourne.github.io/articles" >Visit my blog to read all of my articles!</a></strong></li> -->
 										<li><a href="https://www.linkedin.com/pulse/genais-unfulfilled-promise-think-again-developers-realizing-bourne-tvbyc/" >Article: GenAI's Unfulfilled Promise? Think Again: A Developer's Perspective on Realizing AI Potential</a></li>
 										<li><a href="https://www.linkedin.com/posts/keithbourne_im-excited-to-announce-the-completion-of-activity-7238141696608247808-l1nQ/" >Book annoucement: Unlocking Your Data with Generative AI and Retrieval-Augmented Generation (RAG)</a></li>
 										<li><a href="https://www.linkedin.com/posts/keithbourne_generativeai-ai-rag-activity-7217900817222098946-Qm2S" >Event recap: Build with AI Codelab: Full RAG Pipeline in Code with Gemini & Colab Enterprise</a></li>
