--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
 									is Keith Bourne</h1>
-									<p>Find my book "Unlocking Data with Generative AI and RAG" on Amazon:
-									<br><a href="https://a.co/d/e6DgQSv">https://a.co/d/e6DgQSv</a></p>
+									<p><strong>Find my book "Unlocking Data with Generative AI and RAG," a top 50 AI book, on Amazon:
+									<br><a href="https://a.co/d/e6DgQSv">https://a.co/d/e6DgQSv</a></strong></p>
 									<ul>
-									<li>Senior Generative AI Data Scientist | Technical Project Manager | GenAI Author</li>
-									<li>20 years experience building technologies, primarily in </strong>generative AI, machine learning, and mobile.</strong>
+									<li>Senior Generative AI Data Scientist | Technical Manager | GenAI Author</li>
+									<li>15+ years experience building technologies, primarily in </strong>generative AI and mobile.</strong>
 									<li>Master's in Applied Data Science from the University of Michigan</li>
 									<li>Master's in Business Administration (MBA) from Babson College</li>
 									<li>Specialities: Generative AI | Retrieval Augmented Generation (RAG) | large model training & fine-tuning</li>
